--- a/src/sass/blocks/_footer.scss
+++ b/src/sass/blocks/_footer.scss
@@ -1,6 +1,15 @@
 .footer {
   min-height: 630px;
   position: relative;
+
+  &__map {
+    iframe {
+      width: 100%;
+      height: 630px;
+      border: 0;
+    }
+  }
+
   &__info {
     padding: 50px 68px 60px 68px;
     position: absolute;
@@ -11,6 +20,7 @@
     height: 270px;
     background-color: $main-color;
   }
+
   &__addr {
     margin-bottom: 30px;
     font-size: 20px;
@@ -18,6 +28,7 @@
     font-weight: 500;
     color: #ffffff;
   }
+
   &__phone {
     display: block;
     text-align: center;
@@ -25,17 +36,20 @@
     line-height: 20px;
     font-weight: 700;
     color: #ffffff;
+
     &:hover {
       color: #ffffff;
       text-decoration: none;
     }
   }
+
   &__social {
     margin-top: 30px;
     display: flex;
     justify-content: center;
     align-items: center;
   }
+
   &__social-link {
     display: flex;
     justify-content: center;
@@ -45,10 +59,12 @@
     width: 50px;
     height: 50px;
     margin-right: 30px;
+
     &:nth-child(3) {
       margin-right: 0;
     }
   }
+
   img {
     height: 27px;
   }
