--- a/src/sass/blocks/_reasons.scss
+++ b/src/sass/blocks/_reasons.scss
@@ -2,18 +2,22 @@
   min-height: 470px;
   background-color: #f6f6f6;
   padding: 69px 0 78px 0;
+
   &__wrapper {
     display: flex;
     justify-content: space-between;
     margin-top: 65px;
   }
+
   &__item {
     width: 243px;
+
     img {
       display: block;
       margin: 0 auto;
     }
   }
+
   &__sub {
     margin-top: 34px;
     font-size: 18px;
@@ -21,6 +25,7 @@
     color: #0d0d0d;
     text-align: center;
   }
+
   &__descr {
     margin-top: 23px;
     font-size: 14px;
@@ -28,9 +33,20 @@
     font-weight: 300;
     color: #0d0d0d;
     text-align: center;
+
     a {
       text-decoration: underline;
       color: #ff0000;
+    }
+  }
+
+  &__img {
+    &_animated {
+      animation: heartbeat 1.5s ease infinite;
+
+      &:hover {
+        animation-play-state: paused;
+      }
     }
   }
 }
