--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,11 +1,19 @@
+@import "libs/bootstrap-reboot.min";
+@import "libs/fonts";
+@import "libs/slick";
+
 @import "base/variables";
+@import "base/animation";
+
 * {
   font-family: "Museo Sans Cyrl", sans-serif;
 }
+
 .container {
   max-width: 950px;
   margin: 0 auto;
 }
+
 @import "blocks/promo";
 @import "blocks/header";
 @import "blocks/button";
@@ -18,4 +26,5 @@
 @import "blocks/feed";
 @import "blocks/footer";
 @import "blocks/modal";
+@import "blocks/pageup";
 @import "base/media";
